examples/invalid_scl/dup_type_decl_2.scl
type name <: String
type student_name <: String
type student_name <: Name
